・@RequestParameter指定をアクションのパラメータに対して指定できるようにした。 ・@Injectや@Ins等をアクションのパラメータに対して指定できるようにした。 ・TypeConversionManagerで、Object型への型変換を行なうとnullになってしまう不具合を修正した。
git-svn-id: https://www.seasar.org/svn/ymir/component/trunk@3262 ce2cb714-bd0d-0410-8c66-e472ade7ad34