@@ -17,7 +17,7 @@ public class IntegerConverter extends TypeConverterBase<Integer> {
         }
 
         try {
-            return (new Integer(value.toString()));
+            return (Integer.valueOf(value.toString()));
         } catch (Exception ex) {
             log_.debug("Conversion error occured."
                     + " You may add a constraint annotation"
