@@ -17,7 +17,7 @@ public class LongConverter extends TypeConverterBase<Long> {
         }
 
         try {
-            return (new Long(value.toString()));
+            return (Long.valueOf(value.toString()));
         } catch (Exception ex) {
             if (log_.isDebugEnabled()) {
                 log_.debug("Conversion error occured."
